--- a/src/packages/repositories.config
+++ b/src/packages/repositories.config
@@ -2,6 +2,7 @@
 <repositories>
   <repository path="..\Cassette.Nancy.Demo.Autofac\packages.config" />
   <repository path="..\Cassette.Nancy.Demo.MVC3\packages.config" />
+  <repository path="..\Cassette.Nancy.Demo.TinyIoC\packages.config" />
   <repository path="..\Cassette.Nancy.Test\packages.config" />
   <repository path="..\Cassette.Nancy\packages.config" />
 </repositories>
