--- a/src/Cassette.Nancy.Demo.Autofac/Web.config
+++ b/src/Cassette.Nancy.Demo.Autofac/Web.config
@@ -1,27 +1,35 @@
-﻿<?xml version="1.0"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <configSections>
-    <section name="razor" type="Nancy.ViewEngines.Razor.RazorConfigurationSection, Nancy.ViewEngines.Razor"/>
+    <section name="razor" type="Nancy.ViewEngines.Razor.RazorConfigurationSection, Nancy.ViewEngines.Razor" />
   </configSections>
+  <appSettings>
+    <add key="webPages:Enabled" value="false" />
+  </appSettings>
+  <system.web>
+    <compilation debug="true" targetFramework="4.0">
+      <buildProviders>
+        <add extension=".cshtml" type="Nancy.ViewEngines.Razor.BuildProviders.NancyCSharpRazorBuildProvider, Nancy.ViewEngines.Razor.BuildProviders" />
+        <add extension=".vbhtml" type="Nancy.ViewEngines.Razor.BuildProviders.NancyVisualBasicRazorBuildProvider, Nancy.ViewEngines.Razor.BuildProviders" />
+      </buildProviders>
+    </compilation>
+    <httpHandlers>
+      <add verb="*" type="Nancy.Hosting.Aspnet.NancyHttpRequestHandler" path="*" />
+    </httpHandlers>
+  </system.web>
   <razor disableAutoIncludeModelNamespace="true">
     <assemblies>
-      <add assembly="Cassette"/>
-      <add assembly="Cassette.Views"/>
+      <add assembly="Cassette" />
+      <add assembly="Cassette.Nancy" />
     </assemblies>
     <namespaces>
-      <add namespace="Cassette.Views"/>
+      <add namespace="Cassette.Nancy" />
     </namespaces>
   </razor>
-  <system.web>
-    <httpHandlers>
-      <add verb="*" type="Nancy.Hosting.Aspnet.NancyHttpRequestHandler" path="*"/>
-    </httpHandlers>
-    <compilation debug="true"/>
-  </system.web>
   <system.webServer>
-    <validation validateIntegratedModeConfiguration="false"/>
+    <validation validateIntegratedModeConfiguration="false" />
     <handlers>
-      <add name="Nancy" verb="*" type="Nancy.Hosting.Aspnet.NancyHttpRequestHandler" path="*"/>
+      <add name="Nancy" verb="*" type="Nancy.Hosting.Aspnet.NancyHttpRequestHandler" path="*" />
     </handlers>
   </system.webServer>
 </configuration>
