--- a/src/Cassette.Nancy.Test/Cassette.Nancy.Test.csproj
+++ b/src/Cassette.Nancy.Test/Cassette.Nancy.Test.csproj
@@ -37,9 +37,6 @@
     <Reference Include="HtmlAgilityPlus">
       <HintPath>..\..\dependencies\Nancy\dependencies\htmlagilitypack\HtmlAgilityPlus.dll</HintPath>
     </Reference>
-    <Reference Include="NLog">
-      <HintPath>..\packages\NLog.2.0.0.2000\lib\net40\NLog.dll</HintPath>
-    </Reference>
     <Reference Include="nunit.framework, Version=2.6.0.12051, Culture=neutral, PublicKeyToken=96d09a1eb7f44a77, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\packages\NUnit.2.6.0.12054\lib\nunit.framework.dll</HintPath>
@@ -56,24 +53,17 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\packages\Utility.0.7.0.0\lib\net40\Utility.dll</HintPath>
     </Reference>
-    <Reference Include="Utility.Logging, Version=1.4.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\packages\Utility.Logging.1.4.0.0\lib\net40\Utility.Logging.dll</HintPath>
-    </Reference>
-    <Reference Include="Utility.Logging.NLog, Version=1.4.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\packages\Utility.Logging.NLog.1.4.0.0\lib\net40\Utility.Logging.NLog.dll</HintPath>
-    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AssetRouteHandlerTest.cs" />
     <Compile Include="BundleRouteHandlerTest.cs" />
     <Compile Include="HudRouteHandlerTest.cs" />
+    <Compile Include="OptimizingBootstrapper.cs" />
     <Compile Include="TestCassetteConfigurationToo.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RawFileRouteHandlerTest.cs" />
     <Compile Include="RazorViewTest.cs" />
-    <Compile Include="TestBootstrapper.cs" />
+    <Compile Include="NonOptimizingBootstrapper.cs" />
     <Compile Include="TestCassetteConfiguration.cs" />
     <Compile Include="TestModule.cs" />
     <Compile Include="TestRazorConfiguration.cs" />
