--- a/src/Cassette.Nancy.Test/Cassette.Nancy.Test.csproj
+++ b/src/Cassette.Nancy.Test/Cassette.Nancy.Test.csproj
@@ -37,27 +37,8 @@
     <Reference Include="HtmlAgilityPlus">
       <HintPath>..\..\dependencies\Nancy\dependencies\htmlagilitypack\HtmlAgilityPlus.dll</HintPath>
     </Reference>
-    <Reference Include="IronRuby, Version=1.1.3.0, Culture=neutral, PublicKeyToken=7f709c5b713576e1, processorArchitecture=MSIL">
-      <HintPath>..\packages\IronRuby.1.1.3\Lib\IronRuby.dll</HintPath>
-    </Reference>
-    <Reference Include="IronRuby.Libraries">
-      <HintPath>..\packages\IronRuby.1.1.3\Lib\IronRuby.Libraries.dll</HintPath>
-    </Reference>
-    <Reference Include="IronRuby.Libraries.Yaml">
-      <HintPath>..\packages\IronRuby.1.1.3\Lib\IronRuby.Libraries.Yaml.dll</HintPath>
-    </Reference>
-    <Reference Include="Microsoft.Dynamic, Version=1.1.0.20, Culture=neutral, PublicKeyToken=7f709c5b713576e1, processorArchitecture=MSIL">
-      <HintPath>..\packages\IronRuby.1.1.3\Lib\Microsoft.Dynamic.dll</HintPath>
-    </Reference>
-    <Reference Include="Microsoft.Scripting, Version=1.1.0.20, Culture=neutral, PublicKeyToken=7f709c5b713576e1, processorArchitecture=MSIL">
-      <HintPath>..\packages\IronRuby.1.1.3\Lib\Microsoft.Scripting.dll</HintPath>
-    </Reference>
-    <Reference Include="Microsoft.Scripting.Metadata, Version=1.1.0.20, Culture=neutral, PublicKeyToken=7f709c5b713576e1, processorArchitecture=MSIL">
-      <HintPath>..\packages\IronRuby.1.1.3\Lib\Microsoft.Scripting.Metadata.dll</HintPath>
-    </Reference>
-    <Reference Include="nunit.framework, Version=2.6.0.12051, Culture=neutral, PublicKeyToken=96d09a1eb7f44a77, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\packages\NUnit.2.6.0.12054\lib\nunit.framework.dll</HintPath>
+    <Reference Include="NLog">
+      <HintPath>..\packages\NLog.2.0.0.2000\lib\net40\NLog.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -71,19 +52,24 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\packages\Utility.0.7.0.0\lib\net40\Utility.dll</HintPath>
     </Reference>
+    <Reference Include="Utility.Logging">
+      <HintPath>..\packages\Utility.Logging.1.4.2.2\lib\net40\Utility.Logging.dll</HintPath>
+    </Reference>
+    <Reference Include="Utility.Logging.NLog">
+      <HintPath>..\packages\Utility.Logging.NLog.1.4.2.2\lib\net40\Utility.Logging.NLog.dll</HintPath>
+    </Reference>
+    <Reference Include="xunit">
+      <HintPath>..\packages\xunit.1.9.0.1566\lib\xunit.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="AssetRouteHandlerTest.cs" />
-    <Compile Include="BundleRouteHandlerTest.cs" />
-    <Compile Include="HudRouteHandlerTest.cs" />
     <Compile Include="OptimizingBootstrapper.cs" />
-    <Compile Include="TestCassetteConfigurationToo.cs" />
+    <Compile Include="TestCassetteBundleConfigurationToo.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="RawFileRouteHandlerTest.cs" />
     <Compile Include="RazorViewTest.cs" />
     <Compile Include="NonOptimizingBootstrapper.cs" />
-    <Compile Include="TestCassetteConfiguration.cs" />
-    <Compile Include="TestModule.cs" />
+    <Compile Include="TestCassetteBundleConfiguration.cs" />
+    <Compile Include="TestNancyModule.cs" />
     <Compile Include="TestRazorConfiguration.cs" />
   </ItemGroup>
   <ItemGroup>
