--- a/src/Cassette.Nancy.Test/packages.config
+++ b/src/Cassette.Nancy.Test/packages.config
@@ -1,7 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="IronRuby" version="1.1.3" />
-  <package id="NUnit" version="2.6.0.12054" />
+  <package id="NLog" version="2.0.0.2000" targetFramework="net40" />
   <package id="Utility" version="0.7.0.0" />
   <package id="Utility.Logging" version="1.3.1.0" />
+  <package id="Utility.Logging" version="1.4.2.2" targetFramework="net40" />
+  <package id="Utility.Logging.NLog" version="1.4.2.2" targetFramework="net40" />
+  <package id="xunit" version="1.9.0.1566" targetFramework="net40" />
 </packages>
