--- a/src/Cassette.Nancy.Demo.TinyIoC/Web.config
+++ b/src/Cassette.Nancy.Demo.TinyIoC/Web.config
@@ -1,15 +1,15 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <configSections>
-    <section name="razor" type="Nancy.ViewEngines.Razor.RazorConfigurationSection, Nancy.ViewEngines.Razor"/>
+    <section name="razor" type="Nancy.ViewEngines.Razor.RazorConfigurationSection, Nancy.ViewEngines.Razor" />
   </configSections>
   <razor disableAutoIncludeModelNamespace="true">
     <assemblies>
-      <add assembly="Cassette"/>
-      <add assembly="Cassette.Nancy"/>
+      <add assembly="Cassette" />
+      <add assembly="Cassette.Nancy" />
     </assemblies>
     <namespaces>
-      <add namespace="Cassette.Nancy"/>
+      <add namespace="Cassette.Nancy" />
     </namespaces>
   </razor>
   <runtime>
@@ -28,6 +28,12 @@
     <httpHandlers>
       <add verb="*" type="Nancy.Hosting.Aspnet.NancyHttpRequestHandler" path="*" />
     </httpHandlers>
+    <compilation debug="true" targetFramework="4.0">
+      <buildProviders>
+        <add extension=".cshtml" type="Nancy.ViewEngines.Razor.BuildProviders.NancyCSharpRazorBuildProvider, Nancy.ViewEngines.Razor.BuildProviders" />
+        <add extension=".vbhtml" type="Nancy.ViewEngines.Razor.BuildProviders.NancyVisualBasicRazorBuildProvider, Nancy.ViewEngines.Razor.BuildProviders" />
+      </buildProviders>
+    </compilation>
   </system.web>
   <system.webServer>
     <validation validateIntegratedModeConfiguration="false" />
@@ -35,4 +41,7 @@
       <add name="Nancy" verb="*" type="Nancy.Hosting.Aspnet.NancyHttpRequestHandler" path="*" />
     </handlers>
   </system.webServer>
+  <appSettings>
+    <add key="webPages:Enabled" value="false" />
+  </appSettings>
 </configuration>
