--- a/src/Cassette.Nancy.Demo.TinyIoC/packages.config
+++ b/src/Cassette.Nancy.Demo.TinyIoC/packages.config
@@ -4,5 +4,9 @@
   <package id="Jurassic" version="2.1.1" />
   <package id="Nancy" version="0.11.0" />
   <package id="Nancy.Hosting.Aspnet" version="0.11.0" />
+  <package id="Nancy.Viewengines.Razor" version="0.11.0" targetFramework="net40" />
   <package id="Newtonsoft.Json" version="4.5.7" />
+  <package id="NLog" version="2.0.0.2000" targetFramework="net40" />
+  <package id="Utility.Logging" version="1.4.2.3" targetFramework="net40" />
+  <package id="Utility.Logging.NLog" version="1.4.2.3" targetFramework="net40" />
 </packages>
