--- a/src/Cassette.Nancy/Cassette.Nancy.csproj
+++ b/src/Cassette.Nancy/Cassette.Nancy.csproj
@@ -49,11 +49,13 @@
     <Compile Include="..\SharedAssemblyInfo.cs">
       <Link>Properties\SharedAssemblyInfo.cs</Link>
     </Compile>
+    <Compile Include="AssetRequestHandler.cs" />
     <Compile Include="Bundles.cs" />
     <Compile Include="BundlesHelper.cs" />
     <Compile Include="IBundlesHelper.cs" />
     <Compile Include="CassetteNancyStartup.cs" />
     <Compile Include="CassetteRequestHandler.cs" />
+    <Compile Include="ICassetteRequestHandler.cs" />
     <Compile Include="UrlModifier.cs" />
     <Compile Include="HandlerPathPrepender.cs" />
     <Compile Include="IsolatedStorageContainer.cs" />
