--- a/src/Cassette.Nancy.Demo.TinyIoC/nlog.config
+++ b/src/Cassette.Nancy.Demo.TinyIoC/nlog.config
@@ -5,7 +5,7 @@
   <targets>
     <target name="logfile"
             xsi:type="File"
-            fileName="${basedir}/App_Data/logs/site-${date:format=yyyyMMdd}.log"
+            fileName="${basedir}/logs/site-${date:format=yyyyMMdd}.log"
             keepFileOpen="true"
             layout="${longdate}|${level:uppercase=true}|${logger}|${message}  ${exception:format=ToString,innerFormat=ToString}"
     />
