--- a/src/Cassette.Nancy.Test/nlog.config
+++ b/src/Cassette.Nancy.Test/nlog.config
@@ -5,31 +5,17 @@
   <targets>
     <target name="logfile"
             xsi:type="File"
-            fileName="${specialFolder:folder=CommonApplicationData}/${processname}/${processname}-${date:format=yyyyMMdd}.log"
+            fileName="${basedir}/App_Data/logs/site-${date:format=yyyyMMdd}.log"
             keepFileOpen="true"
-            layout="${longdate}|${level:uppercase=true}|${logger}|${message}"
-    />
-    <target name="errfile"
-            xsi:type="File"
-            fileName="${specialFolder:folder=CommonApplicationData}/${processname}/${processname}-ERROR-${date:format=yyyyMMdd}.log"
-            keepFileOpen="true"
-            layout="${longdate}|${logger}|${exception:format=Message,Type,StackTrace:innerFormat=Message,Type,StackTrace:maxInnerExceptionLevel=10}"
+            layout="${longdate}|${level:uppercase=true}|${logger}|${message}  ${exception:format=ToString,innerFormat=ToString}"
     />
     <target name="udp"
             xsi:type="NLogViewer"
             address="udp4://localhost:7071" />
-    />
   </targets>
 
   <rules>
-    <logger name="*"
-            minlevel="info"
-            writeTo="logfile" />
-    <logger name="*"
-            minlevel="error"
-            writeTo="errfile" />
-    <logger name="*"
-            minlevel="trace"
-            writeTo="udp" />
+    <logger name="*" minlevel="info" writeTo="logfile" />
+    <logger name="*" minlevel="trace" writeTo="udp" />
   </rules>
 </nlog>
