--- a/src/Cassette.Nancy.Test/packages.config
+++ b/src/Cassette.Nancy.Test/packages.config
@@ -1,9 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="AjaxMin" version="4.56.4560.33404" targetFramework="net40" />
+  <package id="Jurassic" version="2.1.1" targetFramework="net40" />
+  <package id="Newtonsoft.Json" version="4.5.7" targetFramework="net40" />
   <package id="NLog" version="2.0.0.2000" targetFramework="net40" />
-  <package id="Utility" version="0.7.0.0" />
+  <package id="Utility" version="0.7.1.0" targetFramework="net40" />
   <package id="Utility.Logging" version="1.3.1.0" />
-  <package id="Utility.Logging" version="1.4.2.2" targetFramework="net40" />
-  <package id="Utility.Logging.NLog" version="1.4.2.2" targetFramework="net40" />
   <package id="xunit" version="1.9.0.1566" targetFramework="net40" />
 </packages>
