--- a/src/Cassette.Nancy.Test/Cassette.Nancy.Test.csproj
+++ b/src/Cassette.Nancy.Test/Cassette.Nancy.Test.csproj
@@ -68,7 +68,10 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AssetRequestHandlerTest.cs" />
+    <Compile Include="BundleRequestHandlerTest.cs" />
+    <Compile Include="DiagnosticRequestHandlerTest.cs" />
     <Compile Include="OptimizingBootstrapper.cs" />
+    <Compile Include="RawFileRequestHandlerTest.cs" />
     <Compile Include="TestCassetteBundleConfigurationToo.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RazorViewTest.cs" />
@@ -92,6 +95,10 @@
     <ProjectReference Include="..\..\dependencies\cassette\src\Cassette.CoffeeScript\Cassette.CoffeeScript.csproj">
       <Project>{C9A552DA-83EB-4479-BAB6-C40B6091E3D4}</Project>
       <Name>Cassette.CoffeeScript</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\dependencies\cassette\src\Cassette.Sass\Cassette.Sass.csproj">
+      <Project>{52B1448C-8165-46B7-B024-A6BF9F60D766}</Project>
+      <Name>Cassette.Sass</Name>
     </ProjectReference>
     <ProjectReference Include="..\..\dependencies\cassette\src\Cassette\Cassette.csproj">
       <Project>{A5CCF9D3-5D49-4BFC-B9A6-9EC9E0E29C50}</Project>
