--- a/src/Cassette.Nancy/Cassette.Nancy.csproj
+++ b/src/Cassette.Nancy/Cassette.Nancy.csproj
@@ -50,6 +50,7 @@
       <Link>Properties\SharedAssemblyInfo.cs</Link>
     </Compile>
     <Compile Include="AssetRequestHandler.cs" />
+    <Compile Include="BundleRequestHandler.cs" />
     <Compile Include="Bundles.cs" />
     <Compile Include="BundlesHelper.cs" />
     <Compile Include="DiagnosticBundleConfiguration.cs" />
@@ -62,6 +63,7 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <Compile Include="RawFileRequestHandler.cs" />
     <Compile Include="UrlModifier.cs" />
     <Compile Include="HandlerPathPrepender.cs" />
     <Compile Include="IsolatedStorageContainer.cs" />
@@ -71,6 +73,10 @@
     <Compile Include="WebHostSettingsConfiguration.cs" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\..\dependencies\cassette\src\Cassette.Less\Cassette.Less.csproj">
+      <Project>{EC1BE4F4-A2A7-4154-9F4D-F75D1B1FD976}</Project>
+      <Name>Cassette.Less</Name>
+    </ProjectReference>
     <ProjectReference Include="..\..\dependencies\cassette\src\Cassette\Cassette.csproj">
       <Project>{A5CCF9D3-5D49-4BFC-B9A6-9EC9E0E29C50}</Project>
       <Name>Cassette</Name>
