using package restore. compiling against packages instead of submodules. updated to cassette 2.0

--- a/src/Cassette.Nancy.Demo.TinyIoC/Web.config
+++ b/src/Cassette.Nancy.Demo.TinyIoC/Web.config
@@ -7,6 +7,7 @@
     <assemblies>
       <add assembly="Cassette" />
       <add assembly="Cassette.Nancy" />
+      <add assembly="Nancy" />
     </assemblies>
     <namespaces>
       <add namespace="Cassette.Nancy" />
