--- a/src/Cassette.Nancy.Demo.MVC3/packages.config
+++ b/src/Cassette.Nancy.Demo.MVC3/packages.config
@@ -1,15 +1,14 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="AjaxMin" version="4.56.4560.33404" targetFramework="net40" />
-  <package id="Cassette" version="2.0.0-beta3" targetFramework="net40" />
-  <package id="Cassette.Aspnet" version="2.0.0-beta3" targetFramework="net40" />
-  <package id="Cassette.CoffeeScript" version="2.0.0-beta3" targetFramework="net40" />
-  <package id="Cassette.Less" version="2.0.0-beta3" targetFramework="net40" />
-  <package id="Cassette.Sass" version="2.0.0-beta3" targetFramework="net40" />
-  <package id="Cassette.Views" version="2.0.0-beta3" targetFramework="net40" />
-  <package id="DotlessClientOnly" version="1.3.0.4" targetFramework="net40" />
-  <package id="IronRuby" version="1.1.3" targetFramework="net40" />
+  <package id="AjaxMin" version="4.60.4609.17023" targetFramework="net40" />
+  <package id="AspNetMvc" version="3.0.20105.1" targetFramework="net40" />
+  <package id="Cassette" version="2.0.0" targetFramework="net40" />
+  <package id="Cassette.Aspnet" version="2.0.0" targetFramework="net40" />
+  <package id="Cassette.CoffeeScript" version="2.0.0" targetFramework="net40" />
+  <package id="Cassette.Views" version="2.0.0" targetFramework="net40" />
   <package id="Jurassic" version="2.1.1" targetFramework="net40" />
-  <package id="SassAndCoffee.Core" version="2.0.2.0" targetFramework="net40" />
-  <package id="SassAndCoffee.Ruby" version="2.0.2.0" targetFramework="net40" />
+  <package id="Microsoft.AspNet.Mvc" version="3.0.20105.1" targetFramework="net40" />
+  <package id="Microsoft.AspNet.Razor" version="1.0.20105.408" targetFramework="net40" />
+  <package id="Microsoft.AspNet.WebPages" version="1.0.20105.408" targetFramework="net40" />
+  <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net40" />
 </packages>
