--- a/src/Cassette.Nancy/packages.config
+++ b/src/Cassette.Nancy/packages.config
@@ -1,4 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="AjaxMin" version="4.60.4609.17023" targetFramework="net40" />
+  <package id="Cassette" version="2.0.0" targetFramework="net40" />
+  <package id="Nancy" version="0.11.0" targetFramework="net40" />
+  <package id="Nancy.Viewengines.Razor" version="0.11.0" targetFramework="net40" />
   <package id="NLog" version="2.0.0.2000" targetFramework="net40" />
 </packages>
