--- a/src/Cassette.Nancy.Demo.MVC3/Web.config
+++ b/src/Cassette.Nancy.Demo.MVC3/Web.config
@@ -30,24 +30,11 @@
         <add namespace="System.Web.Mvc.Html" />
         <add namespace="System.Web.Routing" />
         <add namespace="System.Web.WebPages" />
-        <add namespace="Cassette.Views" />
       </namespaces>
     </pages>
-    <httpModules>
-      <add name="CassetteHttpModule" type="Cassette.Aspnet.CassetteHttpModule, Cassette.Aspnet" />
-    </httpModules>
-    <httpHandlers>
-      <add path="cassette.axd" verb="*" type="Cassette.Aspnet.CassetteHttpHandler, Cassette.Aspnet" />
-    </httpHandlers>
   </system.web>
   <system.webServer>
     <validation validateIntegratedModeConfiguration="false" />
-    <modules>
-      <add name="CassetteHttpModule" type="Cassette.Aspnet.CassetteHttpModule, Cassette.Aspnet" />
-    </modules>
-    <handlers>
-      <add name="CassetteHttpHandler" path="cassette.axd" verb="*" allowPathInfo="true" type="Cassette.Aspnet.CassetteHttpHandler, Cassette.Aspnet" preCondition="integratedMode" />
-    </handlers>
   </system.webServer>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
@@ -57,7 +44,11 @@
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="AjaxMin" publicKeyToken="21ef50ce11b5d80f" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-4.51.4507.18296" newVersion="4.51.4507.18296" />
+        <bindingRedirect oldVersion="0.0.0.0-4.67.4639.17277" newVersion="4.67.4639.17277" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="dotless.ClientOnly" publicKeyToken="96b446c9e63eae34" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-1.3.0.5" newVersion="1.3.0.5" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
