--- a/src/Cassette.Nancy.Test/app.config
+++ b/src/Cassette.Nancy.Test/app.config
@@ -1,3 +1,6 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
+  <appSettings>
+    <add key="webPages:Enabled" value="false" />
+  </appSettings>
 </configuration>
