--- a/src/Cassette.Nancy.Test/packages.config
+++ b/src/Cassette.Nancy.Test/packages.config
@@ -1,21 +1,22 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="AjaxMin" version="4.56.4560.33404" targetFramework="net40" />
-  <package id="Cassette" version="2.0.0-beta3" targetFramework="net40" />
-  <package id="Cassette.CoffeeScript" version="2.0.0-beta3" targetFramework="net40" />
-  <package id="Cassette.Less" version="2.0.0-beta3" targetFramework="net40" />
-  <package id="Cassette.Sass" version="2.0.0-beta3" targetFramework="net40" />
-  <package id="dotless" version="1.3.0.4" targetFramework="net40" />
-  <package id="DotlessClientOnly" version="1.3.0.4" targetFramework="net40" />
-  <package id="Iesi.Collections" version="3.3.1.4000" targetFramework="net40" />
+  <package id="AjaxMin" version="4.60.4609.17023" targetFramework="net40" />
+  <package id="Cassette" version="2.0.0" targetFramework="net40" />
+  <package id="Cassette.CoffeeScript" version="2.0.0" targetFramework="net40" />
+  <package id="Cassette.Less" version="2.0.0" targetFramework="net40" />
+  <package id="Cassette.Sass" version="2.0.0" targetFramework="net40" />
+  <package id="CsQuery" version="1.2.1" targetFramework="net40" />
+  <package id="DotlessClientOnly" version="1.3.0.5" targetFramework="net40" />
   <package id="IronRuby" version="1.1.3" targetFramework="net40" />
   <package id="Jurassic" version="2.1.1" targetFramework="net40" />
-  <package id="Newtonsoft.Json" version="4.5.7" targetFramework="net40" />
+  <package id="Nancy" version="0.12.1" targetFramework="net40" />
+  <package id="Nancy.Testing" version="0.12.1" targetFramework="net40" />
+  <package id="Nancy.Viewengines.Razor" version="0.12.1" targetFramework="net40" />
   <package id="NLog" version="2.0.0.2000" targetFramework="net40" />
   <package id="SassAndCoffee.Core" version="2.0.2.0" targetFramework="net40" />
   <package id="SassAndCoffee.Ruby" version="2.0.2.0" targetFramework="net40" />
   <package id="Utility" version="0.7.1.0" targetFramework="net40" />
   <package id="Utility.Logging" version="1.3.1.0" />
-  <package id="xunit" version="1.9.0.1566" targetFramework="net40" />
-  <package id="xunit.extensions" version="1.9.0.1566" targetFramework="net40" />
+  <package id="xunit" version="1.9.1" targetFramework="net40" />
+  <package id="xunit.extensions" version="1.9.1" targetFramework="net40" />
 </packages>
